testsuite/tests/rename/should_fail/T23740g.stderr

T23740g.hs:7:15: error: [GHC-45510]
    • Term variable ‘head’ cannot be used here
        (term variables cannot be promoted)
    • In the kind ‘head’
      In the data type declaration for ‘T’
